# spend

./: .gitignore  README.md  TODO.md  check.sh  dev-requirements.txt  pyproject.toml  run.sh  run_tests.sh
.github/workflows/: check.yml
docs/: 2026-04-22-tech-debt-audit.md  spend_er_diagram.mermaid
queries/: top-producers.sql  top-products.sql  top-stores.sql
spend/: db.py  main.py  producers.py  products.py  shell.py  slug.py  stores.py  vouchers.py
tests/: conftest.py  test_db.py  test_producers.py  test_products.py  test_shell.py  test_slug.py  test_stores.py  test_vouchers.py
