[project]
name = "spend"
version = "0.1.0"
description = "Personal spending data input program"
requires-python = ">=3.10"
license = "GPL-3.0-only"

[project.scripts]
spend = "spend.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
